tests/invalid/try_io_else.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module try_io_else.
:- interface.

:- import_module io.

:- pred main(io::di, io::uo) is det.

%---------------------------------------------------------------------------%
%---------------------------------------------------------------------------%

:- implementation.

%---------------------------------------------------------------------------%

main(!IO) :-
    ( try [io(!IO)]
        true
    then
        true
    else    % not allowed
        true
    ).
